src/main.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import url('https://fonts.googleapis.com/css2?family=Love+Light&family=Rubik+Puddles&display=swap');

:root {
  transition: background-color 500ms ease-in, color 500ms ease-in;
}

:root.dark {
  transition: background-color 500ms ease-in, color 500ms ease-in;
}

@keyframes pop {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  25% {
    transform: scale(1.1);
    opacity: 0.5;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.transition-transform {
  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
}

.scale-110 {
  animation: pop 1s ease-in-out;
}

/* Add this to your main.css or a relevant CSS file */
.checkbox-large {
  width: 20px;
  height: 20px;
}

border-double {
  border-style: double;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: white;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 125%; /* Position above the button */
  left: 50%;
  margin-left: -60px;
  opacity: 0;
  transition: opacity 0.1s;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

